# gemmaguard

./: .env.example  README.md  pyproject.toml
Classifier_Development/Analysis/: bootstrap_classifier_comparison.py  compare_classifier_errors.py  extract_misclassifications_gemmaguard.py  extract_misclassifications_logreg.py  extract_misclassifications_wildguard.py  plot_confusion_matrix.py  plot_roc_curve_gemmaguard.py  plot_roc_curve_logreg.py  plot_roc_curve_wildguard.py
Classifier_Development/GemmaGuard/: Dockerfile  submit.sh  training_script.py
Classifier_Development/LogReg/: run.sh  train_logreg_hpopt.py
Cross_Lingual_Analysis/Analysis/: analyze_paired_statistics.py  analyze_response_lengths.py  generate_tables.py
Cross_Lingual_Analysis/LLM_Response_Pipeline/: 01_generate.py  02_translate.py  03_classify_wildguard.py  04_classify_gemmaguard.sh  05_classify_logreg.py  06_analyze_all_models.py
Cross_Lingual_Analysis/LLM_Response_Pipeline/classify_gcp/: Dockerfile  classify_script.py  submit.sh
Cross_Lingual_Analysis/LLM_Response_Pipeline/shared/: __init__.py  analysis_utils.py  data_utils.py  llm_clients.py  wildguard_classifier.py  wildguard_hf_endpoint.py
Data/: download_offenseval.py  download_wildguardmix.py  prepare_full_training_data.py  translate_offensive_dataset.py  upload_full_training_to_gcs.py
